<resources>
    <string name="app_name">Android_Fundamentals</string>
    <string name="orange_textview">This is an orange TextView</string>
    <string name="green_textview">This is a green TextView</string>
    <string name="blue_textView">This is a blue TextView</string>
    <string name="text_button">This is a button</string>
    <string name="green_button">This is a green button</string>
    <string name="this_is_a_edittext">This is a EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="notify_me">Notify me :)</string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="login">LOGIN</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="i_accept_t_c"><![CDATA[I accept T&C]]></string>
    <string name="submit">SUBMIT</string>
    <string name="error_email_input">Fill the input with a valid email</string>
    <string name="error_phone_valid">Fill the input with a valid phone</string>
    <string name="error_is_accepted_input">Check should be accepted</string>
    <string name="spinner_example">Spinner Example</string>
    <string name="scroll_view">ScrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
</resources>
