<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".week2.Week2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/orange_textview"
            android:textSize="@dimen/text_20" />

        <TextView
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/green_textview"
            android:textSize="@dimen/text_20" />

        <TextView
            android:layout_width="@dimen/space_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/blue_textView"
            android:textSize="@dimen/text_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_16"
        android:orientation="horizontal">

        <Button
            android:layout_width="@dimen/space_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/rose"
            android:gravity="center"
            android:padding="@dimen/space_16"
            android:text="@string/text_button"
            android:textSize="@dimen/text_20" />

        <ImageView
            android:layout_width="@dimen/space_0"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/space_16"
            android:src="@drawable/ic_android_black_24dp" />

        <Button
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:padding="@dimen/space_16"
            android:text="@string/green_button"
            android:textSize="@dimen/text_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/this_is_a_edittext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/this_is_a_new_edittext" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@color/pale_green">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="@dimen/space_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/space_8"
                    android:text="@string/notify_me"
                    android:textSize="@dimen/text_20" />

                <Switch
                    android:layout_width="@dimen/space_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/space_8"
                    android:text="@string/auto_backup" />

            </LinearLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>


        </LinearLayout>

    </ScrollView>

</LinearLayout>